# sphinx-thumb-image

./: .flake8  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
docs/: conf.py  examples.rst  index.rst  install.rst  install2 copy 3.rst  more copy.rst  usage.rst
docs/_images/: ball.apng
docs/sub/: sub.rst
docs/sub copy 2/: sub.rst
sphinx_thumb_image/: __init__.py  directives.py  extension.py  lib.py  mtime.py  resize.py  thumb.py  transforms.py  utils.py
tests/integration_tests/: test_poetry.py  test_version.py
tests/unit_tests/: __init__.py  conftest.py  test_default_target.py  test_defaults.py  test_docs_defaults.py  test_docs_defaults_target.py  test_error_handling.py  test_format_target.py  test_formats.py  test_lib.py  test_list_table.py  test_mtime.py  test_paths.py  test_placeholder.py  test_rendered_defaults.py  test_rendered_figure.py  test_rendered_image.py  test_scale.py  test_target_format.py  test_target_fullsize.py  test_target_original.py  test_todo.py  test_utils_format_target.py  test_utils_get_new_dimensions.py  test_utils_get_thumb_size.py  utils.py
tests/unit_tests/test_docs/test-defaults/: conf.py  index.rst  target.rst
tests/unit_tests/test_docs/test-defaults/sub/: target.rst
tests/unit_tests/test_docs/test-figure/: index.rst
tests/unit_tests/test_docs/test-image/: index.rst
