[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sphinx-thumb-image"
version = "0.0.1"
description = "Sphinx extension that resizes images into thumbnails on the fly"
readme = "README.md"
authors = [{name = "Robpol86", email = "robpol86@gmail.com"}]
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Plugins",
    "Environment :: Win32 (MS Windows)",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
requires-python = "^3.9"
dependencies = [
    "pillow",
    "sphinx",
]

[project.urls]
repository = "https://github.com/Robpol86/sphinx_thumb_image"

[tool.poetry]
packages = [{include = "sphinx_thumb_image"}]

[dependency-groups]
dev = [
    # Linters.
    "black",
    "flake8",
    "flake8-docstrings",
    "flake8-import-order",
    "pep8-naming",
    "pylint",
    # Tests.
    "pytest",
    "pytest-icdiff",
]

[tool.black]
line-length = 125
target-version = ["py39", "py310", "py311", "py312"]

[tool.pylint.FORMAT]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "fd"]
ignore = [
    ".venv/*",
    "build/*",
    "dist/*",
    "docs/_build/*",
]
max-line-length = 125
reports = false

[tool.pytest.ini_options]
addopts = "--durations=15 --showlocals --verbose --verbose"
log_level = "DEBUG"
