[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sphinx-thumb-image"
version = "0.0.1"
description = "Sphinx extension that resizes images into thumbnails on the fly"
readme = "README.md"
authors = [{name = "Robpol86", email = "robpol86@gmail.com"}]
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Plugins",
    "Environment :: Win32 (MS Windows)",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.9"
dependencies = [
    "pillow",
    "sphinx",
]

[project.urls]
documentation = "https://sphinx-thumb-image.readthedocs.io"
repository = "https://github.com/Robpol86/sphinx_thumb_image"

[tool.poetry]
packages = [{include = "sphinx_thumb_image"}]

[dependency-groups]
dev = [
    # Docs.
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-notfound-page",
    "sphinx-rtd-theme",
    "toml",
    # Linters.
    "black",
    "flake8",
    "flake8-docstrings",
    "flake8-import-order",
    "pep8-naming",
    "pylint",
    "ruff",
    # Tests.
    "beautifulsoup4",
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-icdiff",
]

[tool.black]
line-length = 125
target-version = ["py39", "py313"]

[tool.coverage.report]
exclude_lines = [
    "^\\s*from",
    "^\\s*import",
    "^\\s*raise AssertionError",
    "^\\s*raise NotImplementedError",
]
fail_under = 85

[tool.coverage.run]
branch = true

[tool.pylint.FORMAT]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "fd"]
ignore = [
    ".venv/*",
    "build/*",
    "dist/*",
    "docs/_build/*",
]
max-line-length = 125
reports = false

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "fixme",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true
min-similarity-lines = 7

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --durations=15 --showlocals --verbose --verbose"
log_level = "DEBUG"

[tool.ruff]
line-length = 125

[tool.ruff.lint]
select = ["D", "E", "F", "I", "N", "S"]
extend-select = ["E501"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S607"]
